[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/interface/button_settings_pressed.svg" type="Texture" id=1]
[ext_resource path="res://assets/interface/button_settings.svg" type="Texture" id=2]
[ext_resource path="res://assets/interface/font/Cantarell-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/interface/Options.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/click.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/interface/font/Cantarell-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/interface/button_check_round_press.svg" type="Texture" id=7]
[ext_resource path="res://assets/interface/button_check_round.svg" type="Texture" id=8]
[ext_resource path="res://assets/interface/button_fullscreen_press.svg" type="Texture" id=9]
[ext_resource path="res://assets/interface/button_fullscreen.svg" type="Texture" id=10]
[ext_resource path="res://assets/interface/button_exit_pressed.svg" type="Texture" id=11]
[ext_resource path="res://assets/interface/button_exit.svg" type="Texture" id=12]
[ext_resource path="res://assets/interface/font/Cantarell-Italic.ttf" type="DynamicFontData" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0235294, 0.0235294, 0.0313726, 0.313726 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Options" type="Control"]
script = ExtResource( 4 )

[node name="OptionsPanel" type="Panel" parent="."]
margin_left = 64.0
margin_top = 784.0
margin_right = 1216.0
margin_bottom = 1376.0
custom_styles/panel = SubResource( 1 )

[node name="OptionsTitle" type="Label" parent="OptionsPanel"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.25
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1

[node name="FullScreenButton" type="TextureButton" parent="OptionsPanel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.125
anchor_bottom = 0.15
margin_top = -2.47955e-05
margin_bottom = -2.28882e-05
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="ExitButton" type="TextureButton" parent="OptionsPanel"]
visible = false
anchor_left = 0.125
anchor_top = 0.05
anchor_right = 0.2
anchor_bottom = 0.15
margin_top = -2.47955e-05
margin_bottom = -2.28882e-05
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="MuteMusicLabel" type="Label" parent="OptionsPanel"]
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.4
custom_fonts/font = SubResource( 3 )
text = "Mute Music"
valign = 1

[node name="MuteSFXLabel" type="Label" parent="OptionsPanel"]
anchor_left = 0.1
anchor_top = 0.45
anchor_right = 0.5
anchor_bottom = 0.6
custom_fonts/font = SubResource( 3 )
text = "Mute Sounds"
valign = 1

[node name="SumOfBestLabel" type="Label" parent="OptionsPanel"]
visible = false
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.9
anchor_bottom = 0.85
custom_fonts/font = SubResource( 3 )
text = "Sum of Best: -"
align = 1
valign = 1

[node name="MuteMusic" type="TextureButton" parent="OptionsPanel"]
anchor_left = 0.8
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.4
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="MuteSFX" type="TextureButton" parent="OptionsPanel"]
anchor_left = 0.8
anchor_top = 0.45
anchor_right = 0.9
anchor_bottom = 0.6
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="CreditsLabel" type="Label" parent="OptionsPanel"]
anchor_left = 0.05
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 0.975
custom_fonts/font = SubResource( 4 )
text = "This game is made by Fr75s. All art is also made by Fr75s. Music is by Kevin MacLeod, and Sound Effects are by Kenney. The font used in UI elements is Cantarell, and the font used in buttons and special labels is Outfit."
align = 1
valign = 2
autowrap = true

[node name="VersionLabel" type="Label" parent="OptionsPanel"]
anchor_left = 0.75
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.15
custom_fonts/font = SubResource( 4 )
text = "v1.0.1"
align = 1
autowrap = true

[node name="SecretInput" type="LineEdit" parent="OptionsPanel"]
anchor_left = 0.25
anchor_top = 1.0
anchor_right = 0.75
anchor_bottom = 1.1
custom_colors/font_color = Color( 0.0235294, 0.0235294, 0.0313726, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
align = 1
max_length = 20
placeholder_text = "shhhh..."
placeholder_alpha = 0.05

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 1184.0
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 96.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="OptionsTween" type="Tween" parent="."]

[node name="OptionsAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="OptionsPanel/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="OptionsPanel/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="OptionsPanel/MuteMusic" to="." method="_on_MuteMusic_pressed"]
[connection signal="pressed" from="OptionsPanel/MuteSFX" to="." method="_on_MuteSFX_pressed"]
[connection signal="text_entered" from="OptionsPanel/SecretInput" to="." method="_on_SecretInput_text_entered"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
